# QueueWorld

./: .editorconfig  .gitattributes  .gitignore  ALGORITHMS.txt  CMakeLists.txt  LICENSE  README.md
include/: QwConfig.h  QwLinkTraits.h  QwList.h  QwMpmcPopAllLifoStack.h  QwMpscFifoQueue.h  QwNodePool.h  QwSList.h  QwSTailList.h  QwSingleLinkNodeInfo.h  QwSpscUnorderedResultQueue.h  qw_atomic.h  qw_remove_pointer.h
src/: QwNodePool.cpp
tests/: CMakeLists.txt  QwList_test.cpp  QwMpmcPopAllLifoStack_test.cpp  QwMpscFifoQueue_test.cpp  QwNodePool_test.cpp  QwSList_test.cpp  QwSTailList_test.cpp  QwSpscUnorderedResultQueue_test.cpp  QwTestMain.cpp  Qw_Lists_adhocTestsShared.h  Qw_Lists_axiomaticTestsShared.h  Qw_Lists_randomisedTestShared.h  catch.hpp
